WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252343
WebGeolocationManager should use WeakHashMap of WebPage instead of raw pointers
https://bugs.webkit.org/show_bug.cgi?id=252343
Summary
WebGeolocationManager should use WeakHashMap of WebPage instead of raw pointers
Ryosuke Niwa
Reported
2023-02-15 14:00:45 PST
Use WeakHashMap instead of HashMap of raw pointers.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-02-15 14:05:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10170
EWS
Comment 2
2023-02-15 17:27:51 PST
Committed
260333@main
(544d14e53571): <
https://commits.webkit.org/260333@main
> Reviewed commits have been landed. Closing PR #10170 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-15 17:28:19 PST
<
rdar://problem/105524443
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug