WebGeolocationManager should use WeakHashMap of WebPage instead of raw pointers https://bugs.webkit.org/show_bug.cgi?id=252343

Reviewed by Chris Dumez.

Deployed WeakHashMap in place of HashMap of raw pointers.

* Source/WebKit/WebProcess/Geolocation/WebGeolocationManager.cpp:
(WebKit::WebGeolocationManager::registerWebPage):
(WebKit::WebGeolocationManager::unregisterWebPage):
(WebKit::WebGeolocationManager::setEnableHighAccuracyForPage):
* Source/WebKit/WebProcess/Geolocation/WebGeolocationManager.h:

Canonical link: https://commits.webkit.org/260333@main