Source/WebKit/WebProcess/Geolocation/WebGeolocationManager.cpp
@@ -74,7 +74,7 @@ void WebGeolocationManager::registerWebPage(WebPage& page, const String& authori
     pageSets.pageSet.add(page);
     if (needsHighAccuracy)
         pageSets.highAccuracyPageSet.add(page);
-    m_pageToRegistrableDomain.add(&page, registrableDomain);
+    m_pageToRegistrableDomain.add(page, registrableDomain);
 
     if (!wasUpdating) {
         m_process.parentProcessConnection()->send(Messages::WebGeolocationManagerProxy::StartUpdating(registrableDomain, page.webPageProxyIdentifier(), authorizationToken, needsHighAccuracy), 0);
@@ -88,7 +88,7 @@ void WebGeolocationManager::registerWebPage(WebPage& page, const String& authori
 
 void WebGeolocationManager::unregisterWebPage(WebPage& page)
 {
-    auto registrableDomain = m_pageToRegistrableDomain.take(&page);
+    auto registrableDomain = m_pageToRegistrableDomain.take(page);
     if (registrableDomain.string().isEmpty())
         return;
 
@@ -116,7 +116,7 @@ void WebGeolocationManager::unregisterWebPage(WebPage& page)
 
 void WebGeolocationManager::setEnableHighAccuracyForPage(WebPage& page, bool enabled)
 {
-    auto registrableDomain = m_pageToRegistrableDomain.get(&page);
+    auto registrableDomain = m_pageToRegistrableDomain.get(page);
     if (registrableDomain.string().isEmpty())
         return;
 
